fix contact page fields on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -447,6 +447,12 @@ fieldset label {
   .persona-info{
     flex-direction: column;
   }
+
+  .col-50 {
+    -ms-flex: 100%; /* IE10 */
+    flex: 100%;
+  }
+
 }
 
 
